---
config:
  theme: dark
  look: neo
  layout: elk
---
erDiagram
	direction BT
	LOT_INFO {
		uuid id PK ""  
		text name  ""  
		parking_type_enum lot_type  ""  
	}

	VIOLATIONS {
		text code PK ""  
		text description  ""  
		int ammount_cents  ""  
	}

	USER_INFO {
		uuid id PK ""  
		text first_name  ""  
		text last_name  ""  
		text phone  ""  
		text email  ""  
		parking_type_enum parking_type  ""  
	}

	CAR_INFO {
		uuid id PK ""  
		uuid owner_id FK ""  
		text plate  ""  
		text model  ""  
		text color  ""  
	}

	PARKING_SPOT {
		uuid id PK ""  
		uuid lot_id Fk ""  
		int space  ""  
	}

	RESERVATION {
		uuid id PK ""  
		uuid user_id FK ""  
		uuid car_id FK ""  
		uuid parking_spot_id FK ""  
		timestamptz start_time  ""  
		timestamptz end_time  ""  
	}

	SENSOR_EVENTS {
		uuid id PK ""  
		uuid parking_spot_id Fk ""  
		sensor_event_type event_type  ""  
		timestamptz event_time  ""  
	}

	PERMITS {
		uuid id PK ""  
		uuid user_id FK ""  
		parking_type_enum permit_type  ""  
		timestamptz issued_date  ""  
		timestamptz expiration_date  ""  
	}

	PAYMENTS {
		uuid id PK ""  
		uuid user_id FK ""  
		int amount_cents  ""  
		timestamptz date  ""  
	}

	TICKETS {
		uuid id PK ""  
		uuid car_id FK ""  
		uuid parking_spot_id FK ""  
		timestamptz issue_time  ""  
		text violation_code  FK ""  
		boolean is_resolved  ""  
	}

	SENSOR_EVENT_TYPE {
		ARRIVAL DEPARTURE  ""  
	}

	PARKING_TYPE_ENUM {
		STUDENT GUEST  ""  
		STAFF UNKNOWN  ""  
	}

	CAR_INFO||--||USER_INFO:"owner_id -> id"
	RESERVATION||--||USER_INFO:"user_id -> id"
	RESERVATION||--||CAR_INFO:"car_id -> id"
	RESERVATION||--||PARKING_SPOT:"parking_spot_id -> id"
	PARKING_SPOT||--||LOT_INFO:"lot_id -> id"
	SENSOR_EVENTS||--||PARKING_SPOT:"parking_spot_id -> id"
	PERMITS||--||USER_INFO:"user_id -> id"
	PAYMENTS||--||USER_INFO:"user_id -> id"
	TICKETS||--||CAR_INFO:"car_id -> id"
	TICKETS||--||PARKING_SPOT:"parking_spot_id -> id"
	SENSOR_EVENT_TYPE||--||SENSOR_EVENTS:"event_type"
	PARKING_TYPE_ENUM||--||LOT_INFO:"lot_type"
	PARKING_TYPE_ENUM||--||USER_INFO:"parking_type"
	PARKING_TYPE_ENUM||--||PERMITS:"permit_type"
	VIOLATIONS||--||TICKETS:"code"
